# BioQC-Lite

./: .gitignore  README.md  pyproject.toml
src/bioqc/: main.py
